Closed Bug 1822138 Opened 3 years ago Closed 3 years ago

We don't need to handle multiple WriteCallbacks for datagrams before connection

Categories

(Core :: Networking, defect, P2)

defect

Tracking

()

RESOLVED FIXED
113 Branch
Tracking Status
firefox113 --- fixed

People

(Reporter: jesup, Assigned: jesup)

References

Details

(Whiteboard: [necko-triaged])

Attachments

(1 file)

Per Kagami, there's no issue with getting multiple WriteCallbacks before we resolve the promise from the first, so we don't need to queue a list of datagrams before connection is made.

Severity: -- → S3
Priority: -- → P2
Whiteboard: [necko-triaged]
Pushed by rjesup@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/c93fec9914f5 We don't need to queue multiple datagrams for sending once connected r=saschanaz

Backed out for causing build bustages on WebTransportDatagramDuplexStream.cpp

  • Backout link
  • Push with failures
  • Failure Log
  • Failure line: /builds/worker/workspace/obj-build/dist/include/mozilla/dom/Promise.h:300:33: error: function 'mozilla::dom::Promise::ThenWithCycleCollectedArgs<(lambda at /builds/worker/checkouts/gecko/dom/webtransport/api/WebTransportDatagramDuplexStream.cpp:190:13), RefPtr<mozilla::dom::IncomingDatagramStreamAlgorithms> &, RefPtr<mozilla::dom::Promise> &>' is used but not defined in this translation unit, and cannot be defined in any other translation unit
Flags: needinfo?(rjesup)
Pushed by rjesup@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/e9dedf6b5215 We don't need to queue multiple datagrams for sending once connected r=saschanaz
Status: NEW → RESOLVED
Closed: 3 years ago
Resolution: --- → FIXED
Target Milestone: --- → 113 Branch
Flags: needinfo?(rjesup)
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: