Bug 1822138: We don't need to queue multiple datagrams for sending once connected r=saschanaz

Differential Revision: https://phabricator.services.mozilla.com/D172459